--- a/index.html
+++ b/index.html
@@ -402,10 +402,11 @@
 		
 		
 		<footer>
-			<div id="footer-head">Sponsors</div>
+			<div id="footer-head">Partners</div>
 			<div id="sponsor-branding">
 				<ul class="unstyled">
 		
+					<li><a href="http://www.zeega.org/"><div class="logo logo-zeega" ></div></a></li>
 					<li><a href="http://www.wyncotefoundation.org/"><div class="logo logo-wyncote" ></div></a></li>
 					<li><a href="http://www.arts.gov/artworks/"><div class="logo logo-art-works" ></div></a></li>
 					<li><a href="http://www.macfound.org/"><div class="logo logo-macarthur"></div></a></li>
