--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Curious City</title>
 	<meta name="description" content="">
-	
+ <meta property="og:title" content="Curious City"/>
+    <meta property="og:type" content="movie"/>
+    <meta property="og:url" content="http://wbez.curiouscity.org"/>
+    <meta property="og:image" content="http://curiouscity.wbez.org/images/cc-logo.png"/>
+    <meta property="og:site_name" content="Curious City"/>
 	<meta name="viewport" content="width=device-width">
 	<!-- Application styles -->
 	<link rel="stylesheet" href="css/bootstrap.css">
