--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
  <meta property="og:title" content="Curious City"/>
     <meta property="og:type" content="movie"/>
     <meta property="og:url" content="http://curiouscity.wbez.org/"/>
+   
+	    <meta property="og:image" content="http://curiouscity.wbez.org/images/about.png"/>
     <meta property="og:image" content="http://curiouscity.wbez.org/images/cc-logo-fb-2.png"/>
     <meta property="og:site_name" content="Curious City"/>
 	<meta name="viewport" content="width=device-width">
