--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="header-logo pull-left"><a onClick='_gaq.push([\"_trackEvent\", \"CC-General\", \"Click on WBEZ logo\", \"\"]);' href="http://wbez.org" target="blank"><img src="images/wbez.png" alt="WBEZ91.5" height="20px"/></a></div>
 			<div class="social pull-right">
 				<div class="header-icon-social"><span class='st_facebook' displayText='Facebook' '></span></div>
-				<div class="header-icon-social"  ><span class='st_twitter' displayText='Tweet'></span></div>
+				<div class="header-icon-social" ><a href="https://twitter.com/wbezcuriouscity" target="_blank"><img class='twitter-icon' src="images/twitter_16.png"/></a></div>
 				<a class="header-email-link" href="mailto:curiouscity@wbez.org" onClick="_gaq.push([\"_trackEvent\", \"CC-General\", \"Mail curiouscity@wbez.org\", \"\"]);" target="blank"><i class="icon-envelope icon-white"></i> curiouscity@wbez.org</a>
 			</div>
 		</div>
