--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script type="text/javascript">
 			var _gaq = _gaq || [];
 			_gaq.push(['_setAccount', 'UA-369047-1']);
+			 _gaq.push(['_setDomainName', '.wbez.org']); 
 			_gaq.push(['_trackPageview']);
 			(function() {
 			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
